# Simeioma

./: .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  package.json  playwright.config.ts  vitest.config.ts
docs/: DESIGN_DECISIONS.md  TESTING_AND_BEHAVIOR_PLAN.md
scripts/: build-windows.ps1  visual-qa.mjs
src/: App.css  App.tsx  inputCombos.ts  markdownPreview.tsx  settingsPanel.tsx  simeiomaModel.test.ts  simeiomaModel.ts  sketch.ts  textSelection.ts  windowGeometry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/ui/: simeioma.spec.ts
